--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -2,7 +2,7 @@ on:
   push:
     branches:
       - staging
-name: 🚀 Deploy website on push
+name: 🚀 Deploy API staging
 jobs:
   web-deploy:
     name: 🎉 Deploy
